--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
         <commons-lang3>3.13.0</commons-lang3>
         <commons-io>2.15.0</commons-io>
+        <junit>4.13.2</junit>
         <log4j-api>2.21.1</log4j-api>
         <log4j-core>2.21.1</log4j-core>
         <mybatis-version>3.5.15</mybatis-version>
@@ -41,6 +42,12 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons-io}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
